test: add local test cases for ING-4479
ING-4479